--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,4 +1,7 @@
-/* Reset styles */
+* {
+  box-sizing: border-box;
+}
+
 h1,
 h2,
 h3,
@@ -31,5 +34,12 @@ button {
 img {
   display: block;
   max-width: 100%;
-  height: auto;
+  object-fit: cover;
+}
+
+input,
+textarea,
+fieldset {
+  padding: 0;
+  resize: none;
 }
